[package]
name = "dwarf_dump"
version = "0.1.0"
edition = "2021"


[dependencies]
gimli = "0.31.1"
crossbeam = "0.8"
fallible-iterator = { version = "0.3.0", default-features = false, optional = true }
getopts = "0.2"
# memmap2 = "0.9.4"
num_cpus = "1"
object = { version = "0.36.0", features = ["wasm", "write"] }
# rayon = "1.0"
regex = "1"
typed-arena = "2"

[features]
read = ["gimli/read"]
read-all = ["read", "std", "fallible-iterator"]
fallible-iterator = ["dep:fallible-iterator", "gimli/fallible-iterator"]
write = ["gimli/write"]
std = ["gimli/std"]
default = ["read-all", "write"]
